@@ -101,7 +101,6 @@
                         <string>my_search_portal_type</string>
                         <string>creation_from</string>
                         <string>creation_to</string>
-                        <string>your_category_list</string>
                       </list>
                     </value>
                 </item>
